--- a/package.yaml
+++ b/package.yaml
@@ -35,6 +35,7 @@ executables:
     - -with-rtsopts=-N
     dependencies:
     - koak
+    - llvm-hs
 
 tests:
   koak-test:
@@ -46,3 +47,4 @@ tests:
     - -with-rtsopts=-N
     dependencies:
     - koak
+    - llvm-hs
