--- a/package.yaml
+++ b/package.yaml
@@ -42,11 +42,17 @@ executables:
 tests:
   koak-test:
     main:                Spec.hs
-    source-dirs:         test
+    source-dirs:         
+    - test
+    - app
     ghc-options:
     - -threaded
     - -rtsopts
     - -with-rtsopts=-N
+    - -main-is Spec
     dependencies:
     - koak
     - llvm-hs
+    - llvm-hs-pure
+    - mtl
+    - HUnit
