--- a/package.yaml
+++ b/package.yaml
@@ -39,6 +39,25 @@ executables:
     - llvm-hs-pure
     - mtl
     - containers
+    - bytestring
+  integration:
+    main:                Integration.hs
+    source-dirs:
+    - integration_tests
+    - app
+    ghc-options:
+    - -threaded
+    - -rtsopts
+    - -with-rtsopts=-N
+    - -main-is Integration
+    - -fdiagnostics-color=always
+    dependencies:
+    - koak
+    - llvm-hs
+    - llvm-hs-pure
+    - mtl
+    - containers
+    - bytestring
 
 tests:
   koak-test:
@@ -57,5 +76,7 @@ tests:
     - llvm-hs-pure
     - mtl
     - HUnit
+    - bytestring
+    - containers
     - transformers
 
